// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applies styles for all breakpoints 1`] = `
.c0 {
  color: orange;
}

@media (min-width:520px) {
  .c0 {
    color: red;
  }
}

@media (min-width:768px) {
  .c0 {
    color: blue;
  }
}

@media (min-width:1024px) {
  .c0 {
    color: green;
  }
}

@media (min-width:1320px) {
  .c0 {
    color: yellow;
  }
}

<div
  className="c0"
>
  Foo
</div>
`;

exports[`applies styles to custom components via className 1`] = `
@media (min-width:768px) {
  .c0 {
    color: blue;
  }
}

<div
  className="c0"
>
  Hello
</div>
`;

exports[`handles empty styles object 1`] = `
<div
  className=""
>
  Foo
</div>
`;

exports[`handles missing styles object 1`] = `
<div
  className=""
>
  Foo
</div>
`;

exports[`optimises un-used breakpoints away 1`] = `
@media (min-width:768px) {
  .c0 {
    color: blue;
  }
}

<div
  className="c0"
>
  Foo
</div>
`;

exports[`supports responsive styles based on props 1`] = `
@media (min-width:768px) {
  .c0 {
    color: red;
  }
}

<div
  className="c0"
>
  Hello
</div>
`;
